statum-macros/tests/ui/invalid_machine_generic_not_first.stderr
error: Error: #[machine] currently supports exactly one generic type parameter.

       Fix: remove additional generics from `BadMachine` and keep durable context in fields.

       Expected:
       pub struct BadMachine<State> { ... }
  --> tests/ui/invalid_machine_generic_not_first.rs:13:1
   |
13 | #[machine]
   | ^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_generic_not_first.rs:16:2
   |
16 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_generic_not_first.rs`
